JumpScript/tests/baselines/reference/parserConstructorDeclaration10.errors.txt
tests/cases/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration10.jump(2,18): error TS1093: Type annotation cannot appear on a constructor declaration.


==== tests/cases/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration10.jump (1 errors) ====
    class C {
      constructor(): number { }
                     ~~~~~~
!!! error TS1093: Type annotation cannot appear on a constructor declaration.
    }